Приводит блоки slider, main, price, tariff-selection в соответствие с PP для мобильной версии

--- a/source/index.html
+++ b/source/index.html
@@ -153,6 +153,7 @@
                 <p class="tariff-selection__cell tariff-selection__cell--cost">1,99 usd</p>
               </th>
               <th class="tariff-selection__cell-header">
+                <span class="tariff-selection__hit" aria-label="Иконка показывающая, что данный тариф является хитом"></span>
                 <b class="tariff-selection__cell tariff-selection__cell--tariff">Стандарт</b>
                 <p class="tariff-selection__cell tariff-selection__cell--cost">3,99 usd</p>
               </th>
@@ -165,36 +166,63 @@
               <td class="tariff-selection__cell-option">Розовый фильтр</td>
               <td class="tariff-selection__cell-option">
                 <span class="tariff-selection__cell-hidden">Розовый фильтр</span>
+                <svg class="tariff-selection__icon tariff-selection__icon--on" width="30" height="21" aria-label="Функция включена в тариф">
+                  <use xlink:href="img/sprite.svg#icon-yes"></use>
+                </svg>
               </td>
               <td class="tariff-selection__cell-option">
                 <span class="tariff-selection__cell-hidden">Розовый фильтр</span>
+                <svg class="tariff-selection__icon tariff-selection__icon--on" width="30" height="21" aria-label="Функция включена в тариф">
+                  <use xlink:href="img/sprite.svg#icon-yes"></use>
+                </svg>
               </td>
               <td class="tariff-selection__cell-option">
                 <span class="tariff-selection__cell-hidden">Розовый фильтр</span>
+                <svg class="tariff-selection__icon tariff-selection__icon--on" width="30" height="21" aria-label="Функция включена в тариф">
+                  <use xlink:href="img/sprite.svg#icon-yes"></use>
+                </svg>
               </td>
             </tr>
             <tr class="tariff-selection__item">
               <td class="tariff-selection__cell-option">Смайлики</td>
               <td class="tariff-selection__cell-option">
                 <span class="tariff-selection__cell-hidden">Смайлики</span>
+                <svg class="tariff-selection__icon tariff-selection__icon--off" width="27" height="26" aria-label="Функция не включена в тариф">
+                  <use xlink:href="img/sprite.svg#icon-no"></use>
+                </svg>
               </td>
               <td class="tariff-selection__cell-option">
                 <span class="tariff-selection__cell-hidden">Смайлики</span>
+                <svg class="tariff-selection__icon tariff-selection__icon--on" width="30" height="21" aria-label="Функция включена в тариф">
+                  <use xlink:href="img/sprite.svg#icon-yes"></use>
+                </svg>
               </td>
               <td class="tariff-selection__cell-option">
                 <span class="tariff-selection__cell-hidden">Смайлики</span>
+                <svg class="tariff-selection__icon tariff-selection__icon--on" width="30" height="21" aria-label="Функция включена в тариф">
+                  <use xlink:href="img/sprite.svg#icon-yes"></use>
+                </svg>
               </td>
             </tr>
             <tr class="tariff-selection__item">
               <td class="tariff-selection__cell-option">Комментарии</td>
               <td class="tariff-selection__cell-option">
                 <span class="tariff-selection__cell-hidden">Комментарии</span>
+                <svg class="tariff-selection__icon tariff-selection__icon--off" width="27" height="26" aria-label="Функция не включена в тариф">
+                  <use xlink:href="img/sprite.svg#icon-no"></use>
+                </svg>
               </td>
               <td class="tariff-selection__cell-option">
                 <span class="tariff-selection__cell-hidden">Комментарии</span>
+                <svg class="tariff-selection__icon tariff-selection__icon--off" width="27" height="26" aria-label="Функция не включена в тариф">
+                  <use xlink:href="img/sprite.svg#icon-no"></use>
+                </svg>
               </td>
               <td class="tariff-selection__cell-option">
                 <span class="tariff-selection__cell-hidden">Комментарии</span>
+                <svg class="tariff-selection__icon tariff-selection__icon--on" width="30" height="21" aria-label="Функция включена в тариф">
+                  <use xlink:href="img/sprite.svg#icon-yes"></use>
+                </svg>
               </td>
             </tr>
           </table>
