--- a/source/form.html
+++ b/source/form.html
@@ -14,7 +14,7 @@
         <div class="main-nav__wrapper">
           <div class="main-nav__menu">
             <a class="header__logo-link" href="index.html" aria-label="Ссылка на главную страницу Pink">
-              <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
+              <svg class="header__logo" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
                 <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
               </svg>
             </a>
