--- a/source/index.html
+++ b/source/index.html
@@ -13,9 +13,11 @@
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <div class="main-nav__wrapper">
           <div class="main-nav__menu">
-            <svg class="header__logo logo logo--header-color" width="75" height="23" aria-label="Логотип мобильного приложения Pink">
-              <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
-            </svg>
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
+              <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
+              <img class="header__logo logo" src="img/logo-pink-white-mobile.svg" aria-label="Логотип мобильного приложения Pink">
+            </picture>
             <button class="main-nav__toggle" type="button" aria-label="Кнопка открытия/закрытия выпадающего меню"></button>
           </div>
           <ul class="main-nav__list menu-list">
