--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
             <picture>
               <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
               <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
-              <img class="header__logo logo" src="img/logo-pink-white-mobile.svg" aria-label="Логотип мобильного приложения Pink">
+              <img class="header__logo logo" src="img/logo-pink-white-mobile.svg" alt="Логотип мобильного приложения Pink">
             </picture>
             <button class="main-nav__toggle" type="button" aria-label="Кнопка открытия/закрытия выпадающего меню"></button>
           </div>
@@ -87,7 +87,7 @@
             </li>
             <li class="information__item">
               <h3 class="information__title">Меняет мир вокруг</h3>
-              <p class="information__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+              <p class="information__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить&nbsp;эффект</p>
               <picture class="information__picture">
                 <img class="information__photo" src="img/iphone-screen-mobile@1x.png" width="157" height="320" alt="Приложение Pink в деле">
               </picture>
@@ -102,9 +102,8 @@
           </ul>
           <footer class="information__footer effect">
             <div class="effect__wrapper">
-              <p class="effect__title">Эффект на 24 часа!</p>
-              <p class="information__description">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится
-                целые сутки!</p>
+              <p class="effect__title">Эффект на&nbsp;24&nbsp;часа!</p>
+              <p class="effect__description">Британские ученые провели исследования и&nbsp;доказали, что&nbsp;положительный эффект от&nbsp;использования приложения длится целые сутки!</p>
               <a class="effect__link" href="#">Узнать больше об исследовании</a>
             </div>
           </footer>
