Приводит элементы блока price в соответствие с PP для планшетной версии

--- a/source/index.html
+++ b/source/index.html
@@ -227,7 +227,7 @@
               </td>
             </tr>
           </table>
-          <div class="reviews__bullets slider__bullets">
+          <div class="tariff-selection__bullets slider__bullets">
             <button class="slider__button" type="button" aria-label="Кнопка переключения на первый слайд">
               <span class="slider__bullet" aria-label="Первый переключатель"></span>
             </button>
