--- a/source/index.html
+++ b/source/index.html
@@ -13,10 +13,10 @@
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <div class="main-nav__wrapper">
           <div class="main-nav__menu">
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
+            <picture class="main-nav__picture" >
+              <!-- <source media="(min-width: 1200px)" srcset="img/"> -->
               <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
-              <img class="header__logo logo" src="img/logo-pink-white-mobile.svg" alt="Логотип мобильного приложения Pink">
+              <img class="header__logo" src="img/logo-pink-white-mobile.svg" alt="Логотип мобильного приложения Pink">
             </picture>
             <button class="main-nav__toggle" type="button" aria-label="Кнопка открытия/закрытия выпадающего меню"></button>
           </div>
@@ -269,9 +269,10 @@
     </main>
     <footer class="footer footer--hidden page__footer">
       <div class="footer__wrapper wrapper">
-        <svg class="footer__logo logo logo--pink-blue" width="146" height="40" aria-label="Логотип мобильного приложения Pink">
-          <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
-        </svg>
+        <picture class="footer__picture">
+          <!-- <source media="(min-width: 1200px)" srcset="img"> -->
+          <img class="footer__logo" src="img/logo-pink-blue-mobile.svg" alt="Логотип мобильного приложения Pink">
+        </picture>
         <ul class="footer__list social-list">
           <li class="social-list__item">
             <a class="social-list__link social-list__link--twitter" href="#" aria-label="Мы в твиттере">
@@ -298,7 +299,7 @@
         <div class="footer__copyright copyright">
           <span class="copyright__text">Разработано:</span>
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип HTML Academy">
-            <svg class="social-list__icon" width="27" height="34">
+            <svg class="copyright__icon" width="27" height="34">
               <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
             </svg>
           </a>
