--- a/source/index.html
+++ b/source/index.html
@@ -251,7 +251,7 @@
             </li>
             <li class="contacts__item contacts__item--displaced">
               <h3 class="contacts__title">Пишите:</h3>
-              <a class="contacts__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+              <a class="contacts__link contacts__link--email" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
             </li>
             <li class="contacts__item">
               <h3 class="contacts__title">Приезжайте в гости:</h3>
