--- a/source/index.html
+++ b/source/index.html
@@ -87,7 +87,7 @@
               <p class="information__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить&nbsp;эффект</p>
             </li>
             <li class="information__item">
-              <h3 class="information__title">Заводит новых друзей</h3>
+              <h3 class="information__title">Заводит новых&nbsp;друзей</h3>
               <p class="information__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
             </li>
           </ul>
