Корректирует элементы блоков effect, information и добавляет кнопки для переключения слайдера

--- a/source/index.html
+++ b/source/index.html
@@ -131,6 +131,8 @@
               <span class="slider__bullet" aria-label="Третий переключатель"></span>
             </button>
           </div>
+          <button class="slider__toggle slider__toggle--left" type="button" aria-label="Кнопка переключения слайда влево"></button>
+          <button class="slider__toggle slider__toggle--right" type="button" aria-label="Кнопка переключения слайда вправо"></button>
         </div>
       </section>
       <section class="price main__price">
