--- a/source/index.html
+++ b/source/index.html
@@ -306,5 +306,7 @@
       </div>
     </footer>
     <script src="js/main-nav.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGHt_OEYXdVRzpyPXC5ZI8oSGGdTtclso&callback=initMap" async defer></script>
+    <script src="js/map.js"></script>
   </body>
 </html>
