--- a/source/form.html
+++ b/source/form.html
@@ -33,8 +33,8 @@
             <li class="menu-list__item">
               <a class="menu-list__link" href="photo.html">Фотографии</a>
             </li>
-            <li class="menu-list__item menu-list__item--active">
-              <a class="menu-list__link" href="#">Конкурс</a>
+            <li class="menu-list__item">
+              <a class="menu-list__link menu-list__link--active" href="#">Конкурс</a>
             </li>
             <li class="menu-list__item">
               <a class="menu-list__link" href="#">HTML Academy</a>
