--- a/source/index.html
+++ b/source/index.html
@@ -25,8 +25,8 @@
             <button class="main-nav__toggle" type="button" aria-label="Кнопка открытия/закрытия выпадающего меню"></button>
           </div>
           <ul class="main-nav__list menu-list">
-            <li class="menu-list__item menu-list__item--active">
-              <a class="menu-list__link" href="#">Главная</a>
+            <li class="menu-list__item">
+              <a class="menu-list__link menu-list__link--active" href="#">Главная</a>
             </li>
             <li class="menu-list__item">
               <a class="menu-list__link" href="photo.html">Фотографии</a>
