--- a/source/photo.html
+++ b/source/photo.html
@@ -30,8 +30,8 @@
             <li class="menu-list__item">
               <a class="menu-list__link" href="index.html">Главная</a>
             </li>
-            <li class="menu-list__item menu-list__item--active">
-              <a class="menu-list__link" href="#">Фотографии</a>
+            <li class="menu-list__item">
+              <a class="menu-list__link menu-list__link--active" href="#">Фотографии</a>
             </li>
             <li class="menu-list__item">
               <a class="menu-list__link" href="form.html">Конкурс</a>
