--- a/source/form.html
+++ b/source/form.html
@@ -76,27 +76,27 @@
             <legend class="form__legend">Ваши безбашенные достижения в путешествии</legend>
             <ul class="form__list form__list--achievement">
               <li class="form__item">
-                <input class="visually-hidden" id="first-achievement" type="checkbox" name="first-achievement" checked>
+                <input class="form__input visually-hidden" id="first-achievement" type="checkbox" name="first-achievement" checked>
                 <label class="form__label form__label--checkbox" for="first-achievement">Сделал селфи с акулой</label>
               </li>
               <li class="form__item form__item--achievement">
-                <input class="visually-hidden" id="second-achievement" type="checkbox" name="second-achievement" checked>
+                <input class="form__input visually-hidden" id="second-achievement" type="checkbox" name="second-achievement" checked>
                 <label class="form__label form__label--checkbox" for="second-achievement">Обгорел на пляже</label>
               </li>
               <li class="form__item form__item--achievement">
-                <input class="visually-hidden" id="third-achievement" type="checkbox" name="third-achievement">
+                <input class="form__input visually-hidden" id="third-achievement" type="checkbox" name="third-achievement">
                 <label class="form__label form__label--checkbox" for="third-achievement">Видел Чака Норриса</label>
               </li>
               <li class="form__item form__item--achievement">
-                <input class="visually-hidden" id="fourth-achievement" type="checkbox" name="fourth-achievement">
+                <input class="form__input visually-hidden" id="fourth-achievement" type="checkbox" name="fourth-achievement">
                 <label class="form__label form__label--checkbox" for="fourth-achievement">Накупил сувениров</label>
               </li>
               <li class="form__item form__item--achievement">
-                <input class="visually-hidden" id="fifth-achievement" type="checkbox" name="fifth-achievement" checked>
+                <input class="form__input visually-hidden" id="fifth-achievement" type="checkbox" name="fifth-achievement" checked>
                 <label class="form__label form__label--checkbox" for="fifth-achievement">Удержал башню</label>
               </li>
               <li class="form__item form__item--achievement">
-                <input class="visually-hidden" id="sixth-achievement" type="checkbox" name="sixth-achievement">
+                <input class="form__input visually-hidden" id="sixth-achievement" type="checkbox" name="sixth-achievement">
                 <label class="form__label form__label--checkbox" for="sixth-achievement">Разгромил отель</label>
               </li>
             </ul>
@@ -118,15 +118,15 @@
             <legend class="form__legend">С каким приложением путешествовали?</legend>
             <ul class="form__list">
               <li class="form__item">
-                <input class="visually-hidden" id="version-ios" type="radio" name="version-app" checked>
+                <input class="form__input visually-hidden" id="version-ios" type="radio" name="version-app" checked>
                 <label class="form__label form__label--radio" for="version-ios">Pink для iOS</label>
               </li>
               <li class="form__item">
-                <input class="visually-hidden" id="version-android" type="radio" name="version-app">
+                <input class="form__input visually-hidden" id="version-android" type="radio" name="version-app">
                 <label class="form__label form__label--radio" for="version-android">Pink на Android</label>
               </li>
               <li class="form__item">
-                <input class="visually-hidden" id="version-windows" type="radio" name="version-app">
+                <input class="form__input visually-hidden" id="version-windows" type="radio" name="version-app">
                 <label class="form__label form__label--radio" for="version-windows">Windows Phone</label>
               </li>
             </ul>
