Приводит элементы fieldset блока form в соответствие с PP для мобильной версии

--- a/source/form.html
+++ b/source/form.html
@@ -117,22 +117,22 @@
           <fieldset class="form__fieldset form__fieldset--app">
             <legend class="form__legend">С каким приложением путешествовали?</legend>
             <ul class="form__list">
-              <li class="form__item">
+              <li class="form__item form__item--app">
                 <input class="form__input visually-hidden" id="version-ios" type="radio" name="version-app" checked>
                 <label class="form__label form__label--radio" for="version-ios">Pink для iOS</label>
               </li>
-              <li class="form__item">
+              <li class="form__item form__item--app">
                 <input class="form__input visually-hidden" id="version-android" type="radio" name="version-app">
                 <label class="form__label form__label--radio" for="version-android">Pink на Android</label>
               </li>
-              <li class="form__item">
+              <li class="form__item form__item--app">
                 <input class="form__input visually-hidden" id="version-windows" type="radio" name="version-app">
                 <label class="form__label form__label--radio" for="version-windows">Windows Phone</label>
               </li>
             </ul>
           </fieldset>
           <fieldset class="form__fieldset form__fieldset--comment">
-            <legend class="form__legend form__legend--margin">Опишите свои эмоции</legend>
+            <legend class="form__legend">Опишите свои эмоции</legend>
             <label class="visually-hidden" for="user-comment">Комментарии о нашем приложении</label>
             <textarea class="form__textarea" id="user-comment" name="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </fieldset>
