--- a/source/form.html
+++ b/source/form.html
@@ -197,7 +197,7 @@
     <section class="modal modal-show">
       <div class="modal__wrapper modal__wrapper--show">
         <h2 class="modal__title">Ваша заявка отправлена</h2>
-        <p class="modal__description">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+        <p class="modal__description modal__description--show">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим&nbsp;вас.</p>
         <button class="button button--margin button--show" type="button">Закрыть окно</button>
       </div>
     </section>
