Приводит модификатор contacts элемента fieldset в соответствие с PP для планшетной версии страницы Конкурс

--- a/source/form.html
+++ b/source/form.html
@@ -104,13 +104,13 @@
           <fieldset class="form__fieldset form__fieldset--contacts data">
             <legend class="form__legend form__legend--hidden">Контактная информация</legend>
             <ul class="form__list data__list">
-              <li class="data__item data__item--position">
-                <label class="data__label data__label--order" for="user-phone">Номер телефона</label>
-                <input class="data__input" id="user-phone" type="tel" name="phone" placeholder="Номер, пожалуйста">
+              <li class="data__item data__item--contacts">
+                <label class="data__label data__label--contacts" for="user-phone">Номер телефона</label>
+                <input class="data__input data__input--contacts" id="user-phone" type="tel" name="phone" placeholder="Номер, пожалуйста">
               </li>
-              <li class="data__item data__item--position">
-                <label class="data__label data__label--order" for="user-email">Адрес почты</label>
-                <input class="data__input" id="user-email" type="email" name="email" placeholder="Введите почту *" required>
+              <li class="data__item data__item--contacts">
+                <label class="data__label data__label--contacts" for="user-email">Адрес почты</label>
+                <input class="data__input data__input--contacts" id="user-email" type="email" name="email" placeholder="Введите почту *" required>
               </li>
             </ul>
           </fieldset>
