Приводит блоки modal, modal-error, modal-show в соответствие с PP для планшетной версии страницы Конкурс

--- a/source/index.html
+++ b/source/index.html
@@ -266,7 +266,7 @@
     </main>
     <footer class="footer footer--hidden page__footer">
       <div class="footer__wrapper wrapper">
-        <svg class="footer__logo" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
+        <svg class="footer__logo-link" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
           <use xlink:href="img/sprite.svg#logo-pink-blue"></use>
         </svg>
         <!-- <svg class="footer__logo" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
