Приводит модификатор achievement блока fieldst в соответствие с PP для десктопной версии страницы Конкурс

--- a/source/form.html
+++ b/source/form.html
@@ -79,11 +79,11 @@
                 <input class="form__input visually-hidden" id="first-achievement" type="checkbox" name="first-achievement" checked>
                 <label class="form__label form__label--checkbox" for="first-achievement">Сделал селфи с акулой</label>
               </li>
-              <li class="form__item form__item--achievement">
+              <li class="form__item form__item--beach">
                 <input class="form__input visually-hidden" id="second-achievement" type="checkbox" name="second-achievement" checked>
                 <label class="form__label form__label--checkbox" for="second-achievement">Обгорел на пляже</label>
               </li>
-              <li class="form__item form__item--achievement">
+              <li class="form__item form__item--achievement form__item--chuck">
                 <input class="form__input visually-hidden" id="third-achievement" type="checkbox" name="third-achievement">
                 <label class="form__label form__label--checkbox" for="third-achievement">Видел Чака Норриса</label>
               </li>
@@ -91,7 +91,7 @@
                 <input class="form__input visually-hidden" id="fourth-achievement" type="checkbox" name="fourth-achievement">
                 <label class="form__label form__label--checkbox" for="fourth-achievement">Накупил сувениров</label>
               </li>
-              <li class="form__item form__item--achievement">
+              <li class="form__item form__item--achievement form__item--tower">
                 <input class="form__input visually-hidden" id="fifth-achievement" type="checkbox" name="fifth-achievement" checked>
                 <label class="form__label form__label--checkbox" for="fifth-achievement">Удержал башню</label>
               </li>
