Приводит модификатор comment блока fieldst в соответствие с PP для десктопной версии страницы Конкурс

--- a/source/form.html
+++ b/source/form.html
@@ -138,7 +138,7 @@
           </fieldset>
           <div class="competition__footer">
             <button class="form__button button" type="submit">Отправить форму</button>
-            <p class="form__description"> <span class="form__description-simbol">*</span> — обязательные поля</p>
+            <p class="form__description"><span class="form__description-simbol">*</span> — обязательные <span class="form__description-specify">для заполнения</span> поля</p>
           </div>
         </form>
       </section>
