Приводит элементы блоков intro, photo-content, post в соответствие с PP для десктопной версии страницы Фотографии

--- a/source/form.html
+++ b/source/form.html
@@ -43,7 +43,7 @@
         </div>
       </nav>
       <section class="intro intro--inner">
-        <h2 class="intro__title intro__title--width">Конкурс на самое безбашенное путешествие с Пинк</h2>
+        <h2 class="intro__title intro__title--competition">Конкурс на самое безбашенное путешествие с Пинк</h2>
       </section>
     </header>
     <main class="main">
