Приводит элементы блока photo-editor в соответствие с PP для десктопной версии страницы Фотографии

--- a/source/photo.html
+++ b/source/photo.html
@@ -217,7 +217,7 @@
                 <input class="visually-hidden" id="tool-crop" type="radio" name="tool" value="crop">
                 <label class="photo-editor__label" for="tool-crop">
                   <span class="photo-editor__control photo-editor__control--crop" aria-label="Обрезка фотографии">
-                    <svg class="photo-editor__icon" width="45" height="45">
+                    <svg class="photo-editor__icon photo-editor__icon--active" width="46" height="45">
                       <use xlink:href="img/sprite.svg#icon-editor-crop"></use>
                     </svg>
                   </span>
@@ -232,7 +232,7 @@
                       <use xlink:href="img/sprite.svg#icon-editor-fill"></use>
                     </svg>
                   </span>
-                  <span class="photo-editor__scale scale__slider" aria-label="Шкала цвета">
+                  <span class="photo-editor__scale scale__slider scale__slider--hidden" aria-label="Шкала цвета">
                     <span class="scale__toggle" aria-label="Ползунок шкалы цвета"></span>
                   </span>
                 </label>
@@ -243,7 +243,7 @@
                       <use xlink:href="img/sprite.svg#icon-editor-contrast"></use>
                     </svg>
                   </span>
-                  <span class="photo-editor__scale scale__slider" aria-label="Шкала контрастности">
+                  <span class="photo-editor__scale scale__slider scale__slider--hidden" aria-label="Шкала контрастности">
                     <span class="scale__toggle" aria-label="Ползунок шкалы контрастности"></span>
                   </span>
                 </label>
