Перестраивает модификаторы и элементы блока post, page, form для планшетной версии страницы Фотографии

--- a/source/form.html
+++ b/source/form.html
@@ -143,7 +143,7 @@
         </form>
       </section>
     </main>
-    <footer class="footer page__footer">
+    <footer class="footer page__footer page__footer--competition">
       <div class="footer__wrapper wrapper">
         <a class="footer__logo-link" href="index.html" aria-label="Ссылка на главную страницу Pink">
           <svg class="footer__logo" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
