Перестраивает элементы блоков scale, photo-editor для планшетной версии страницы Фотографии

--- a/source/photo.html
+++ b/source/photo.html
@@ -217,34 +217,34 @@
                 <input class="visually-hidden" id="tool-crop" type="radio" name="tool" value="crop">
                 <label class="photo-editor__label" for="tool-crop">
                   <span class="photo-editor__control photo-editor__control--crop" aria-label="Обрезка фотографии">
-                    <svg class="photo-editor__icon photo-editor__icon--active" width="46" height="45">
+                    <svg class="photo-editor__icon photo-editor__icon--crop" width="46" height="45">
                       <use xlink:href="img/sprite.svg#icon-editor-crop"></use>
                     </svg>
                   </span>
                   <span class="photo-editor__scale scale__slider" aria-label="Шкала кадрирования">
-                    <span class="scale__toggle" aria-label="Ползунок шкалы кадрирования"></span>
+                    <span class="scale__toggle scale__toggle--crop" aria-label="Ползунок шкалы кадрирования"></span>
                   </span>
                 </label>
                 <input class="visually-hidden" id="tool-fill" type="radio" name="tool" value="fill">
                 <label class="photo-editor__label" for="tool-fill">
                   <span class="photo-editor__control photo-editor__control--fill" aria-label="Выбор цвета фотографии">
-                    <svg class="photo-editor__icon" width="49" height="45">
+                    <svg class="photo-editor__icon photo-editor__icon--fill" width="49" height="45">
                       <use xlink:href="img/sprite.svg#icon-editor-fill"></use>
                     </svg>
                   </span>
                   <span class="photo-editor__scale scale__slider scale__slider--hidden" aria-label="Шкала цвета">
-                    <span class="scale__toggle" aria-label="Ползунок шкалы цвета"></span>
+                    <span class="scale__toggle scale__toggle--fill" aria-label="Ползунок шкалы цвета"></span>
                   </span>
                 </label>
                 <input class="visually-hidden" id="tool-contrast" type="radio" name="tool" value="contrast">
                 <label class="photo-editor__label" for="tool-contrast">
                   <span class="photo-editor__control photo-editor__control--contrast" aria-label="Выбор контрастности фотографии">
-                    <svg class="photo-editor__icon" width="33" height="33">
+                    <svg class="photo-editor__icon photo-editor__icon--contrast" width="33" height="33">
                       <use xlink:href="img/sprite.svg#icon-editor-contrast"></use>
                     </svg>
                   </span>
                   <span class="photo-editor__scale scale__slider scale__slider--hidden" aria-label="Шкала контрастности">
-                    <span class="scale__toggle" aria-label="Ползунок шкалы контрастности"></span>
+                    <span class="scale__toggle scale__toggle--contrast" aria-label="Ползунок шкалы контрастности"></span>
                   </span>
                 </label>
               </div>
