--- a/source/form.html
+++ b/source/form.html
@@ -155,22 +155,22 @@
         </a>
         <ul class="footer__list social-list">
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--twitter" href="#" aria-label="Мы в твиттере">
+            <a class="social-list__link" href="#" aria-label="Мы в твиттере">
               <svg class="social-list__icon" width="18" height="15">
                 <use xlink:href="img/sprite.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--facebook" href="#" aria-label="Мы в фэйсбуке">
+            <a class="social-list__link" href="#" aria-label="Мы в фэйсбуке">
               <svg class="social-list__icon" width="8" height="19">
                 <use xlink:href="img/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--youtube" href="#" aria-label="Мы в ютюбе">
-              <svg class="social-list__icon" width="15" height="14">
+            <a class="social-list__link" href="#" aria-label="Мы в ютюбе">
+              <svg class="social-list__icon social-list__icon--youtube" width="15" height="14">
                 <use xlink:href="img/sprite.svg#icon-youtube"></use>
               </svg>
             </a>
@@ -179,7 +179,7 @@
         <div class="footer__copyright copyright">
           <span class="copyright__text">Разработано:</span>
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип HTML Academy">
-            <svg class="social-list__icon" width="27" height="34">
+            <svg class="copyright__icon" width="27" height="34">
               <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
             </svg>
           </a>
