--- a/source/form.html
+++ b/source/form.html
@@ -34,7 +34,7 @@
               <a class="menu-list__link" href="photo.html">Фотографии</a>
             </li>
             <li class="menu-list__item">
-              <a class="menu-list__link menu-list__link--active" href="#">Конкурс</a>
+              <a class="menu-list__link menu-list__link--active">Конкурс</a>
             </li>
             <li class="menu-list__item">
               <a class="menu-list__link" href="#">HTML Academy</a>
@@ -110,7 +110,8 @@
               </li>
               <li class="data__item data__item--contacts">
                 <label class="data__label data__label--contacts" for="user-email">Адрес почты</label>
-                <input class="data__input data__input--contacts" id="user-email" type="email" name="email" placeholder="Введите почту *" required>
+                <input class="data__input data__input--contacts" id="user-email" type="email" name="email" placeholder="Введите почту *"
+                  required>
               </li>
             </ul>
           </fieldset>
@@ -138,7 +139,9 @@
           </fieldset>
           <div class="competition__footer">
             <button class="form__button button" type="submit">Отправить форму</button>
-            <p class="form__description"><span class="form__description-simbol">*</span> — обязательные <span class="form__description-specify">для заполнения</span> поля</p>
+            <p class="form__description">
+              <span class="form__description-simbol">*</span> — обязательные
+              <span class="form__description-specify">для заполнения</span> поля</p>
           </div>
         </form>
       </section>
@@ -150,8 +153,8 @@
             <use xlink:href="img/sprite.svg#logo-pink-blue"></use>
           </svg>
           <!-- <svg class="footer__logo" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
-            <use xlink:href="img/sprite.svg#logo-pink-blue-desktop"></use>
-          </svg> -->
+              <use xlink:href="img/sprite.svg#logo-pink-blue-desktop"></use>
+            </svg> -->
         </a>
         <ul class="footer__list social-list">
           <li class="social-list__item">
