--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,7 @@
           </div>
           <ul class="main-nav__list menu-list">
             <li class="menu-list__item">
-              <a class="menu-list__link menu-list__link--active" href="#">Главная</a>
+              <a class="menu-list__link menu-list__link--active">Главная</a>
             </li>
             <li class="menu-list__item">
               <a class="menu-list__link" href="photo.html">Фотографии</a>
@@ -252,8 +252,7 @@
             </li>
             <li class="contacts__item">
               <h3 class="contacts__title">Приезжайте в гости:</h3>
-              <address class="contacts__link">ул. Большая
-                <br> Конюшенная, 19/8</address>
+              <address class="contacts__link">ул. Большая <br> Конюшенная, 19/8</address>
             </li>
           </ul>
         </div>
@@ -270,8 +269,8 @@
           <use xlink:href="img/sprite.svg#logo-pink-blue"></use>
         </svg>
         <!-- <svg class="footer__logo" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
-          <use xlink:href="img/sprite.svg#logo-pink-blue-desktop"></use>
-        </svg> -->
+            <use xlink:href="img/sprite.svg#logo-pink-blue-desktop"></use>
+          </svg> -->
         <ul class="footer__list social-list">
           <li class="social-list__item">
             <a class="social-list__link" href="#" aria-label="Мы в твиттере">
