Добавляет ссылки на приложение в разных маркетах

--- a/source/index.html
+++ b/source/index.html
@@ -45,24 +45,24 @@
         <article class="intro__download app">
           <h3 class="visually-hidden">Способы скачать приложение</h3>
           <p class="app__slogan">Взгляните на жизнь иначе!</p>
-          <a class="app__link link" href="#">Скачать приложение</a>
+          <a class="app__link link" href="https://itunes.apple.com/store" target="blank">Скачать приложение</a>
           <ul class="app__list store-list">
             <li class="store-list__item">
-              <a class="store-list__link" href="#" aria-label="Apple">
+              <a class="store-list__link" href="https://www.apple.com/itunes/charts/free-apps/" target="blank" aria-label="Apple">
                 <svg class="store-list__logo" width="47" height="56" aria-label="Логотип Apple">
                   <use xlink:href="img/sprite.svg#logo-apple"></use>
                 </svg>
               </a>
             </li>
             <li class="store-list__item">
-              <a class="store-list__link" href="#" aria-label="Android">
+              <a class="store-list__link" href="https://play.google.com/store" target="blank" aria-label="Android">
                 <svg class="store-list__logo" width="43" height="47" aria-label="Логотип Android">
                   <use xlink:href="img/sprite.svg#logo-android"></use>
                 </svg>
               </a>
             </li>
             <li class="store-list__item">
-              <a class="store-list__link" href="#" aria-label="Windows Phone">
+              <a class="store-list__link" href="https://www.microsoft.com/en-us/store/b/home" target="blank" aria-label="Windows Phone">
                 <svg class="store-list__logo" width="44" height="41" aria-label="Логотип Windows Phone">
                   <use xlink:href="img/sprite.svg#logo-microsoft"></use>
                 </svg>
