Корректирует отображение блоков contacts, copyright, footer, page для планшетной и десктопной версий

--- a/source/photo.html
+++ b/source/photo.html
@@ -306,7 +306,7 @@
           </li>
         </ul>
         <div class="footer__copyright copyright">
-          <span class="copyright__text">Разработано:</span>
+          <span class="copyright__text">Разработано</span>
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип HTML Academy">
             <svg class="copyright__icon" width="27" height="34">
               <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
