--- a/source/index.html
+++ b/source/index.html
@@ -250,7 +250,7 @@
               <h3 class="contacts__title">Пишите:</h3>
               <a class="contacts__link contacts__link--email" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
             </li>
-            <li class="contacts__item">
+            <li class="contacts__item contacts__item--addres">
               <h3 class="contacts__title">Приезжайте в гости:</h3>
               <address class="contacts__link">ул. Большая <br> Конюшенная, 19/8</address>
             </li>
@@ -295,7 +295,7 @@
           </li>
         </ul>
         <div class="footer__copyright copyright">
-          <span class="copyright__text">Разработано:</span>
+          <span class="copyright__text">Разработано</span>
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип HTML Academy">
             <svg class="copyright__icon" width="27" height="34">
               <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
