Корректирует отображение блоков main, footer, page для планшетной и десктопной версий

--- a/source/form.html
+++ b/source/form.html
@@ -47,7 +47,7 @@
       </section>
     </header>
     <main class="main">
-      <section class="competition">
+      <section class="competition main__competition">
         <h2 class="visually-hidden">Форма для участия в конкурсе</h2>
         <header class="competition__header">
           <p class="competition__description">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
