Корректирует отображение сайта в IE11 и функционал гамбургерного меню

--- a/source/photo.html
+++ b/source/photo.html
@@ -8,9 +8,9 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page">
-    <header class="header">
+    <header class="header hamburger-menu hamburger-menu--closed hamburger-menu--nojs">
       <h1 class="visually-hidden">Страница с фотографиями пользователей, воспользовавшихся приложением Pink</h1>
-      <nav class="main-nav main-nav--closed main-nav--nojs">
+      <nav class="main-nav">
         <div class="main-nav__wrapper">
           <div class="main-nav__menu">
             <a class="header__logo-link" href="index.html" aria-label="Ссылка на главную страницу Pink">
