--- a/source/index.html
+++ b/source/index.html
@@ -8,9 +8,9 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page">
-    <header class="header">
+    <header class="header hamburger-menu hamburger-menu--closed hamburger-menu--nojs">
       <h1 class="visually-hidden">Главная страница мобильного приложения Pink</h1>
-      <nav class="main-nav main-nav--closed main-nav--nojs">
+      <nav class="main-nav">
         <div class="main-nav__wrapper">
           <div class="main-nav__menu">
             <svg class="header__logo header__logo--text" width="75" height="23" aria-label="Мобильная версия логотипа приложения Pink ">
