Добавляет полифил для корректной работы тега picture

--- a/source/form.html
+++ b/source/form.html
@@ -205,5 +205,6 @@
       </div>
     </section>
     <script src="js/main-nav.js"></script>
+    <script src="js/picturefill.min.js"></script>
   </body>
 </html>
