--- a/source/index.html
+++ b/source/index.html
@@ -260,7 +260,9 @@
       <article class="map">
         <h2 class="visually-hidden">Карта проезда</h2>
         <div class="map__interactive" id="map"></div>
-        <img class="map__img" src="img/bg-map-mobile@1x.png" width="320" height="645" alt="Наш офис находится по адресу г.Санкт-Петербург, ул. Большая Конюшенная, д.19/8 ">
+        <picture class="map__picture">
+          <img class="map__img" src="img/bg-map-mobile@2x.jpg" srcset="img/bg-map-mobile@2x.jpg 2x" alt="Наш офис находится по адресу г.Санкт-Петербург, ул. Большая Конюшенная, д.19/8 ">
+        </picture>
       </article>
     </main>
     <footer class="footer footer--hidden page__footer">
@@ -304,9 +306,9 @@
         </div>
       </div>
     </footer>
-    <script src="js/main-nav.js"></script>
+    <!-- <script src="js/main-nav.js"></script>
     <script src="js/picturefill.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGHt_OEYXdVRzpyPXC5ZI8oSGGdTtclso&callback=initMap" async defer></script>
-    <script src="js/map.js"></script>
+    <script src="js/map.js"></script> -->
   </body>
 </html>
