--- a/source/index.html
+++ b/source/index.html
@@ -261,7 +261,9 @@
         <h2 class="visually-hidden">Карта проезда</h2>
         <div class="map__interactive" id="map"></div>
         <picture class="map__picture">
-          <img class="map__img" src="img/bg-map-mobile@2x.jpg" srcset="img/bg-map-mobile@2x.jpg 2x" alt="Наш офис находится по адресу г.Санкт-Петербург, ул. Большая Конюшенная, д.19/8 ">
+          <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
+          <source media="(min-width: 660px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
+          <img class="map__img" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.jpg 2x" alt="Наш офис находится по адресу г.Санкт-Петербург, ул. Большая Конюшенная, д.19/8 ">
         </picture>
       </article>
     </main>
