Добавляет адаптивное и ретиновое изображение элемента list блока information для планшетной версии

--- a/source/index.html
+++ b/source/index.html
@@ -308,9 +308,9 @@
         </div>
       </div>
     </footer>
-    <!-- <script src="js/main-nav.js"></script>
+    <script src="js/main-nav.js"></script>
     <script src="js/picturefill.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGHt_OEYXdVRzpyPXC5ZI8oSGGdTtclso&callback=initMap" async defer></script>
-    <script src="js/map.js"></script> -->
+    <script src="js/map.js"></script>
   </body>
 </html>
