Корректирует отображение сетки блоков effect, information для планшетной версии

--- a/source/index.html
+++ b/source/index.html
@@ -95,14 +95,19 @@
               <p class="information__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
             </li>
           </ul>
-          <footer class="information__footer effect">
-            <div class="effect__wrapper">
+        </div>
+        <footer class="information__footer effect">
+          <div class="effect__wrapper wrapper">
+            <svg class="effect__icon" width="240" height="275" aria-label="Изображение таймера">
+              <use xlink:href="img/sprite.svg#icon-timer"></use>
+            </svg>
+            <div class="effect__about">
               <p class="effect__title">Эффект на&nbsp;24&nbsp;часа!</p>
               <p class="effect__description">Британские ученые провели исследования и&nbsp;доказали, что&nbsp;положительный эффект от&nbsp;использования приложения длится целые сутки!</p>
               <a class="effect__link" href="#">Узнать больше об исследовании</a>
             </div>
-          </footer>
-        </div>
+          </div>
+        </footer>
       </section>
       <section class="reviews">
         <h2 class="visually-hidden">Отзывы пользователей</h2>
