Добавляет адаптивную и ретиновую графику блока standart для десктопной версии

--- a/source/index.html
+++ b/source/index.html
@@ -82,15 +82,15 @@
             <p class="information__text information__text--displaced">Нам есть, что вам предложить!</p>
           </header>
           <ul class="information__list">
-            <li class="information__item">
+            <li class="information__item standart">
               <h3 class="information__title">Поднимает настроение</h3>
               <p class="information__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
             </li>
-            <li class="information__item">
+            <li class="information__item fillter">
               <h3 class="information__title">Меняет мир вокруг</h3>
               <p class="information__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить&nbsp;эффект</p>
             </li>
-            <li class="information__item">
+            <li class="information__item smile">
               <h3 class="information__title">Заводит новых&nbsp;друзей</h3>
               <p class="information__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
             </li>
