Добавляет адаптивную и ретиновую графику блока filter для десктопной версии

--- a/source/index.html
+++ b/source/index.html
@@ -86,7 +86,7 @@
               <h3 class="information__title">Поднимает настроение</h3>
               <p class="information__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
             </li>
-            <li class="information__item fillter">
+            <li class="information__item filter">
               <h3 class="information__title">Меняет мир вокруг</h3>
               <p class="information__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить&nbsp;эффект</p>
             </li>
