Корректирует сетку и вставляет декоротивную иконку блока reviews для десктопной версии

--- a/source/index.html
+++ b/source/index.html
@@ -98,7 +98,7 @@
         </div>
         <footer class="information__footer effect">
           <div class="effect__wrapper wrapper">
-            <svg class="effect__icon" width="240" height="275" aria-label="Изображение таймера">
+            <svg class="effect__icon" width="240" height="275" aria-label="Декоративное изображение таймера">
               <use xlink:href="img/sprite.svg#icon-timer"></use>
             </svg>
             <div class="effect__about">
@@ -112,6 +112,9 @@
       <section class="reviews">
         <h2 class="visually-hidden">Отзывы пользователей</h2>
         <div class="wrapper slider">
+          <svg class="reviews__icon" width="79" height="64" aria-label="Декоративное изображение кавычек">
+            <use xlink:href="img/sprite.svg#icon-quotes"></use>
+          </svg>
           <div class="reviews__list slider__list">
             <blockquote class="reviews__item reviews__item--active slider__item">
               <p class="reviews__author-info">25 лет, водитель трамвая</p>
