Приводит блоки footer, hamburger-menu, header на десктопной версии в соответствие с PP

--- a/source/photo.html
+++ b/source/photo.html
@@ -20,7 +20,7 @@
               <svg class="header__logo header__logo--glasses" width="146" height="40" aria-label="Планшетная версия логотипа приложения Pink">
                 <use xlink:href="img/sprite.svg#logo-pink-white-tablet"></use>
               </svg>
-              <svg class="header__logo header__logo--all" width="146" height="40" aria-label="Десктопная версия логотипа приложения Pink">
+              <svg class="header__logo header__logo--element-decore" width="146" height="40" aria-label="Десктопная версия логотипа приложения Pink">
                 <use xlink:href="img/sprite.svg#logo-pink-white-desktop"></use>
               </svg>
             </a>
@@ -275,12 +275,12 @@
     <footer class="footer page__footer">
       <div class="footer__wrapper wrapper">
         <a class="footer__logo-link" href="index.html" aria-label="Ссылка на главную страницу Pink">
-          <svg class="footer__logo" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
+          <svg class="footer__logo-link footer__logo-link--glasses" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
             <use xlink:href="img/sprite.svg#logo-pink-blue"></use>
           </svg>
-          <!-- <svg class="footer__logo" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
-              <use xlink:href="img/sprite.svg#logo-pink-blue-desktop"></use>
-            </svg> -->
+          <svg class="footer__logo-link footer__logo-link--element-decore" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
+            <use xlink:href="img/sprite.svg#logo-pink-blue-desktop"></use>
+          </svg>
         </a>
         <ul class="footer__list social-list">
           <li class="social-list__item">
