Добавляет адаптивную и ретиновую графику блока post для мобильной версии

--- a/source/photo.html
+++ b/source/photo.html
@@ -58,9 +58,9 @@
             <a class="post__link" href="#">
               <div class="post__hit">Панорама дня</div>
               <picture class="post__source-photo">
-                <!-- <source media="()" srcset="">
-                        <source media="()" srcset=""> -->
-                <img class="post__photo" src="img/panorama-mobile@1x.jpg" width="320" height="137" alt="Панорамный вид с гор">
+                <source media="(min-width: 1200px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
+                <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x">
+                <img class="post__photo" src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@2x.jpg 2x" alt="Панорамный вид с гор">
               </picture>
             </a>
             <div class="wrapper">
@@ -85,7 +85,7 @@
                 <picture class="post__source-photo">
                   <!-- <source media="()" srcset="">
                           <source media="()" srcset=""> -->
-                  <img class="post__photo" src="img/photo-car-mobile@1x.jpg" width="280" height="180" alt="Фотограф в процессе работы">
+                  <img class="post__photo" src="img/photo-car-mobile@1x.jpg" srcset="img/photo-car-mobile@2x.jpg 2x" alt="Фотограф в процессе работы">
                 </picture>
               </a>
               <blockquote class="post__description">
@@ -107,7 +107,7 @@
                 <picture class="post__source-photo">
                   <!-- <source media="()" srcset="">
                           <source media="()" srcset=""> -->
-                  <img class="post__photo" src="img/photo-drumset-mobile@1x.jpg" width="280" height="180" alt="Моя новая барабанная установка">
+                  <img class="post__photo" src="img/photo-drumset-mobile@1x.jpg" srcset="img/photo-drumset-mobile@2x.jpg 2x" alt="Моя новая барабанная установка">
                 </picture>
               </a>
               <blockquote class="post__description">
@@ -129,7 +129,7 @@
                 <picture class="post__source-photo">
                   <!-- <source media="()" srcset="">
                           <source media="()" srcset=""> -->
-                  <img class="post__photo" src="img/photo-window-mobile@1x.jpg" width="280" height="180" alt="Стеклянный потолк в здании небоскрёба">
+                  <img class="post__photo" src="img/photo-window-mobile@1x.jpg" srcset="img/photo-window-mobile@2x.jpg 2x" alt="Стеклянный потолк в здании небоскрёба">
                 </picture>
               </a>
               <blockquote class="post__description">
@@ -151,7 +151,7 @@
                 <picture class="post__source-photo">
                   <!-- <source media="()" srcset="">
                           <source media="()" srcset=""> -->
-                  <img class="post__photo" src="img/photo-fair-mobile@1x.jpg" width="280" height="180" alt="Ярмарка Кубанская бахча">
+                  <img class="post__photo" src="img/photo-fair-mobile@1x.jpg" srcset="img/photo-fair-mobile@2x.jpg" alt="Ярмарка Кубанская бахча">
                 </picture>
               </a>
               <blockquote class="post__description">
@@ -173,7 +173,7 @@
                 <picture class="post__source-photo">
                   <!-- <source media="()" srcset="">
                           <source media="()" srcset=""> -->
-                  <img class="post__photo" src="img/photo-pov-mobile@1x.jpg" width="280" height="180" alt="Присел на камень во время похода">
+                  <img class="post__photo" src="img/photo-pov-mobile@1x.jpg" srcset="img/photo-pov-mobile@2.jpg 2x" alt="Присел на камень во время похода">
                 </picture>
               </a>
               <blockquote class="post__description">
@@ -195,7 +195,7 @@
                 <picture class="post__source-photo">
                   <!-- <source media="()" srcset="">
                           <source media="()" srcset=""> -->
-                  <img class="post__photo" src="img/photo-wing-mobile@1x.jpg" width="280" height="180" alt="Пейзаж из иллюминатора самолета">
+                  <img class="post__photo" src="img/photo-wing-mobile@1x.jpg" srcset="img/photo-wing-mobile@2x.jpg 2x" alt="Пейзаж из иллюминатора самолета">
                 </picture>
               </a>
               <blockquote class="post__description">
