--- a/source/photo.html
+++ b/source/photo.html
@@ -173,7 +173,7 @@
                 <picture class="post__source-photo">
                   <!-- <source media="()" srcset="">
                           <source media="()" srcset=""> -->
-                  <img class="post__photo" src="img/photo-pov-mobile@1x.jpg" srcset="img/photo-pov-mobile@2.jpg 2x" alt="Присел на камень во время похода">
+                  <img class="post__photo" src="img/photo-pov-mobile@1x.jpg" srcset="img/photo-pov-mobile@2x.jpg 2x" alt="Присел на камень во время похода">
                 </picture>
               </a>
               <blockquote class="post__description">
@@ -215,7 +215,7 @@
         </div>
         <footer class="photo-content__footer">
           <p class="photo-content__description">Затмите их всех!
-            <br> Выкладывайте все, что накопилось в телефоне!</p>
+            <br> Выкладывайте всё, что накопилось в телефоне!</p>
         </footer>
       </section>
       <section class="photo-editor">
@@ -225,7 +225,7 @@
             <picture class="photo-editor__source-photo">
               <!-- <source media="()" srcset="">
                     <source media="()" srcset=""> -->
-              <img class="photo-editor__photo" src="img/photo-road-mobile@1x.jpg" width="280" height="374" alt="Зимний пейзаж">
+              <img class="photo-editor__photo" src="img/photo-road-mobile@1x.jpg" srcset="img/photo-road-mobile@2x.jpg 2x" alt="Зимний пейзаж">
             </picture>
             <div class="photo-editor__interface">
               <div class="photo-editor__filter">
